fix: backface visibility bug in safari

--- a/css/events.css
+++ b/css/events.css
@@ -49,6 +49,7 @@ body {
   width: 100%;
   height: 100%;
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   position: absolute;
   transition: transform 1s linear;
 }
